# rust

./: .gitignore  Cargo.toml  README.md  test_save.sim
commons/: Cargo.toml
commons/src/: actor.rs  almost.rs  async_update.rs  barycentric.rs  edge.rs  equalize.rs  fn_sender.rs  grid.rs  hub.rs  index2d.rs  junction.rs  lib.rs  manhattan.rs  perlin.rs  persistence.rs  process.rs  rectangle.rs  scale.rs  sync.rs  unwrap_or.rs  update.rs  update_async.rs
frontier/: Cargo.toml  README.md  dejavu.csv  dependency_graph  dependency_graph.dot  dependency_graph.gv  save.labels  town_names
frontier/resources/fonts/: README.md  dejavu.fnt  roboto_slab_20.fnt  roboto_slab_italic_20.fnt  serif.csv  serif.fnt
frontier/resources/names/: town_names
frontier/resources/textures/: README.md  mipmap.sh  mipmaps.sh  svg2png.sh
frontier/src/: args.rs  avatar.rs  avatars.rs  bridge.rs  citizen.rs  config.rs  configuration.rs  event_forwarder.rs  event_forwarder_2.rs  frontier.rs  game_handler.rs  homeland_start.rs  house_builder.rs  label_editor.rs  main.rs  nation.rs  parameters.rs  pathfinder.rs  polysender.rs  reactor.rs  resource.rs  resource_gen.rs  roadset.rs  route.rs  seen.rs  settlement.rs  shore_start.rs  sync.rs  system.rs  territory.rs  traffic.rs  update_territory.rs  utils.rs  visibility_computer.rs  visited.rs  world.rs  world_artist.rs  world_gen.rs
frontier/src/actors/: avatar_artist.rs  avatar_visibility.rs  avatars.rs  basic_avatar_controls.rs  basic_road_builder.rs  bridge_artist.rs  bridge_builder.rs  build_actor.rs  builder.rs  cheats.rs  clock.rs  controllers.rs  crossings.rs  follow_avatar.rs  labels.rs  micros.rs  mod.rs  nations.rs  object_builder.rs  pathfinder_service.rs  pathfinding_avatar_controls.rs  pause_game.rs  pause_sim.rs  piers.rs  prime_mover.rs  resource_gen.rs  resource_targets.rs  river_explorer.rs  river_piers.rs  rotate.rs  routes.rs  save.rs  sea_piers.rs  settlements.rs  setup_new_world.rs  setup_pathfinder.rs  setup_visibility.rs  speed_control.rs  territory.rs  town_builder.rs  (+5 more)
frontier/src/artists/: avatar_artist.rs  bridge_artist.rs  crop_artist.rs  farm_artist.rs  fast_avatar_artist.rs  house_artist.rs  mod.rs  resource_artist.rs  sprite_sheet.rs  vegetation_artist.rs  world_artist.rs
frontier/src/avatar/: artist.rs  avatar_travel_mode_fn.rs  check_for_port.rs  journey.rs  mod.rs  path.rs  travel_duration.rs  travel_mode.rs  travel_mode_change.rs  travel_mode_fn.rs  vehicle.rs
frontier/src/bridges/: bridge_duration.rs  mod.rs
frontier/src/build_service/: build.rs  build_instruction.rs  build_loader.rs  build_queue.rs  build_service.rs  mod.rs
frontier/src/build_sim/: instruction.rs  mod.rs  params.rs  simulation.rs
frontier/src/configuration/: configuration.rs  event_forwarder.rs  mod.rs  polysender.rs
frontier/src/farms/: farm_artist.rs  mod.rs
frontier/src/game/: game_params.rs  game_state.rs  mod.rs  pathfinder_service.rs
frontier/src/game_event_consumers/: avatar_artist.rs  basic_avatar_controls.rs  basic_road_builder.rs  cheats.rs  labels.rs  (+22 more)
isometric/: Cargo.toml
isometric/resources/: test_font.fnt
isometric/src/: cell_traits.rs  color.rs  coords.rs  cursor_handler.rs  engine.rs  events.rs  font.rs  lib.rs  terrain.rs  transform.rs  utils.rs
(+545 files in other folders)
