[package]
name = "commons"
version = "0.1.0"
authors = ["Thomas Elder <tgelder@gmail.com>"]

[dependencies]
float-cmp = "0.5"
image = "0.22"
nalgebra = { version = "0.18", features = ["serde-serialize"] }
num = "0.2"
rand = { version = "0.7", features = ["small_rng"] }
serde = { version = "1.0", features = ["derive"] }
