[package]
name = "commons"
version = "0.1.0"
authors = ["Thomas Elder <tgelder@gmail.com>"]
edition = "2018"

[dependencies]
async-channel = "1.4"
float-cmp = "0.5"
futures = { version = "0.3", features = ["thread-pool"] }
image = "0.22"
maplit = "1.0.2"
nalgebra = { version = "0.18", features = ["serde-serialize"] }
noise = "0.6.0"
num = "0.2"
rand = { version = "0.7", features = ["small_rng"] }
serde = { version = "1.0", features = ["derive"] }