[package]
name = "commons"
version = "0.1.0"
authors = ["Thomas Elder <tgelder@gmail.com>"]
edition = "2018"

[dependencies]
async-channel = "1.5"
async-trait = "0.1"
async-std = "1.8.0"
bincode = "1.3"
float-cmp = "0.8"
futures = { version = "0.3", features = ["thread-pool"] }
image = "0.23"
log = "0.4"
maplit = "1.0.2"
nalgebra = { version = "0.23", features = ["serde-serialize"] }
noise = "0.7.0"
num = "0.3"
rand = { version = "0.8", features = ["small_rng"] }
serde = { version = "1.0", features = ["derive"] }