[package]
name = "frontier"
version = "0.1.0"
authors = ["Thomas Elder <tgelder@gmail.com>"]
edition = "2018"

[dependencies]
bincode = "1.2.1"
commons = { path = "../commons" }
futures = { version = "0.3", features = ["thread-pool"] }
isometric = { path = "../isometric" }
line_drawing = "0.7.0"
network = { path = "../network" }
pioneer = { path = "../pioneer" }
serde = { version = "1.0", features = ["derive"] }
simple_logger = "1.11.0"