[package]
name = "frontier"
version = "0.1.0"
authors = ["Thomas Elder <tgelder@gmail.com>"]
edition = "2018"

[dependencies]
commons = { path = "../commons" }
futures = { version = "0.3", features = ["thread-pool"] }
isometric = { path = "../isometric" }
line_drawing = "0.8"
network = { path = "../network" }
pioneer = { path = "../pioneer" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
simple_logger = "1.11"
tokio = { version = "1.6", features = ["sync"] }