[package]
name = "isometric"
version = "0.1.0"
authors = ["Thomas Elder <tgelder@gmail.com>"]

[dependencies]
nalgebra = { version = "0.17.2", features = ["serde-serialize"] }
gl = "0.11.0"
glutin = "0.19.0"
image = "0.21.0"
commons = { path = "../commons" }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.1.4"